Fix layout on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
 .main-container {
     height: auto;
     margin: 15vh auto;
-    padding: 30px;
+    padding: 30px 0;
     max-width: 80vw;
     border: 4px solid rgb(97, 196, 221);
     border-radius: 10px;
@@ -99,7 +99,7 @@
     font-size: 45px;
 }
 .result-location {
-    font-size: 5px;
+    font-size: 55px;
 }
 .results-page path {
     color: var(--main-accent-color);
@@ -133,6 +133,9 @@
 }
 
 @media only screen and (min-width: 550px){
+    .main-container {
+        padding: 30px;
+    }
     .brand-area svg {
         font-size: 65px;
     }
